@@ -4,5 +4,9 @@
 </head>
 
 <body>
+
+  <div id="overlay">
+  </div>
+
 </body>
 </html>
